Payee description update.

--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -150,8 +150,7 @@ The following example describes a credit card deposit:
         typeof="rdfs:Class">
         <h3>Payee</h3>
           <p>
-An entity, including a destination account, that receives monetary funds 
-during a <a href="#Transaction">Transaction</a>.
+An entity that defines how many monetary funds should be transferred to a destination account during a <a href="#Transaction">Transaction</a>. A list of Payees can be processed to produce a list of Transfers.
           </p>
           <dl>
             <dt>Status</dt>
