Fixed erroneous signature markup for assetHash.

--- a/specs/source/vocabs/payswarm.html
+++ b/specs/source/vocabs/payswarm.html
@@ -436,7 +436,7 @@ The following example TBD.
         "ps:signature": 
         {
             "a": "sig:JsonldSignature",
-            "sig:signer": "<http://payswarm.example.com/people/john-doe#key-5>",
+            "sig:signer": "&lt;http://payswarm.example.com/people/john-doe#key-5>",
             "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
         }
     },
