Finished documenting signature vocabulary.

--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -137,8 +137,7 @@ The following example describes a credit card deposit:
    "com:transfer": [FIXME: com:Transfer*],
    "sig:signature":
    {
-       "a": "sig:Signature",
-       "sig:signatureFor": "&lt;http://mybank.example.com/deposits/7f7f62ab53cc623cd28#deposit>",
+       "a": "sig:JsonldSignature",
        "sig:signer": "&lt;http://payswarm.example.com/people/john-doe#key-5>",
        "sig:signatureValue": "OWM3YzI4OGQzNGVkMzVmMmQ3ODIyZDY3NjI4NTIyZTk2MzQzNmExMgo="
    }
