--- a/index.xhtml
+++ b/index.xhtml
@@ -29,7 +29,7 @@
 <div class="container vspacing">
   <div class="row">
     <div class="twelvecol">
-      <h1>Rewarding 'awesome' on the Web.
+      <h1>Support one another.
         <span class="subhead">The Universal Payment Standard.</span></h1>
     </div>
   </div>
@@ -37,7 +37,7 @@
     <div class="twelvecol last">
 <p class="largeprint">
 If you have a passion for creating things on the Web, or would like to 
-support people doing awesome things - PaySwarm is for you.
+support people doing great things - PaySwarm is for you.
 The way that we reward each other and pay for services on the Web is broken. 
 Having to enter credit card information or login details is time consuming and 
 monotonous. We should be able to spend a few pennies just as easily as we 
