--- a/specs/index.xhtml
+++ b/specs/index.xhtml
@@ -50,12 +50,15 @@ frequently asked questions about the PaySwarm standardization work.</li>
 <li><a href="payswarm-use-cases">PaySwarm Use Cases</a> - the core
 scenarios that are the basis for the PaySwarm Web API and Payment and
 Transaction processing environment.</li>
-<li><a href="web-api">PaySwarm Web API</a> - </li>
+<li><a href="web-api">PaySwarm Web API</a> - Coming soon ...</li>
 <li><a href="../vocabs/commerce">Commerce Vocabulary</a> - the RDF vocabulary 
 that is used to describe commercial transactions on a PaySwarm network.</li>
 <li><a href="../vocabs/payswarm">PaySwarm Vocabulary</a> - the RDF vocabulary 
 that is used to describe PaySwarm-specific concepts and properties on a 
 PaySwarm network.</li>
+<li><a href="../vocabs/signature">Digital Signature Vocabulary</a> - 
+the RDF vocabulary that is used to describe mechanisms for creating
+digital signatures as well as the digital signatures themselves.</li>
 </ul>
 
 </p>
