Updated the PaySwarm landing page to more clearly explain the basics.

--- a/index.xhtml
+++ b/index.xhtml
@@ -36,20 +36,28 @@
   <div class="row">
     <div class="twelvecol last">
 <p class="largeprint">
-If you have a passion for creating things on the Web, or would like to 
-support people doing great things - PaySwarm is for you.
-The way that we reward each other and pay for services on the Web is broken. 
-Having to enter credit card information or login details is time consuming and 
-monotonous. We should be able to spend a few pennies just as easily as we 
-drop spare change on a table. We need to fix the way that we control and move 
-our money around on the Web.</p>
+PaySwarm enables people that create digital content such as blog posts, music,
+film, episodic content, photos, virtual goods, and documents to distribute their
+creations through their website and <strong>receive payment directly from their 
+fans and customers</strong>. If you have a passion for creating things on the 
+Web, or would like to support people doing great things - PaySwarm is for you.
+</p>
     
 <p class="largeprint">
-The PaySwarm Web platform is an open web standard that enables Web browsers and 
+The platform is an open web standard that enables Web browsers and 
 Web devices to perform Universal Web Payment. PaySwarm fixes the problems with
-rewarding people on the web so that you can spend more time enjoying yourself.
-It ensures that the people that you want to support are automatically rewarded
-for their hard work.</p>
+rewarding people on the web - it reduces and nearly eliminates transactional 
+friction. It ensures that the people that you want to support are automatically 
+rewarded for their hard work.</p>
+
+<p class="largeprint">
+We need Web-native payment technology. That is, it is designed to work with
+how the Web works, not how the banks and the credit card companies work. The
+technology can be integrated directly into WordPress-based websites with 
+support for Drupal and other content management systems in the works. It has
+a simple, well-defined API, like Twitter, that allows for universal payment on 
+the web.
+</p>
     </div>
   </div>
   <div class="row">
@@ -71,15 +79,15 @@ for their hard work.</p>
   <div class="row">
     <div class="threecol">
 
-        <h2>What is PaySwarm?</h2>
+        <h2>Why PaySwarm?</h2>
         <p>
-PaySwarm enables people that create digital content such as blog posts, music,
-film, episodic content, photos, virtual goods, and documents to distribute their
-creations through their website and <strong>receive payment directly from their 
-fans and customers</strong>. The technology is designed to be integrated directly 
-into WordPress-based websites with support for Drupal and other content 
-management systems in the works.
-        </p>
+The way that we reward each other and pay for services on the Web is broken. 
+There is a great amount of friction that is created between you and the
+people you want to reward on the Web. People that are doing amazing things,
+that are doing great work. Having to enter credit card information or login 
+details is time consuming and monotonous. We should be able to spend a few 
+pennies just as easily as we drop spare change on a table. We need to fix the 
+way that we control and move our money around on the Web.</p>
     </div>
     
     <div class="threecol">
