Added web-api ED for 2011-09-20.

--- a/specs/index.xhtml
+++ b/specs/index.xhtml
@@ -47,10 +47,12 @@ permission or consent of the group that created PaySwarm.
 <ul>
 <li><a href="payswarm-faq">PaySwarm FAQ</a> - covers a list of 
 frequently asked questions about the PaySwarm standardization work.</li>
-<li><a href="payswarm-use-cases">PaySwarm Use Cases</a> - the core
+<li><a href="source/use-cases">PaySwarm Use Cases</a> - the core
 scenarios that are the basis for the PaySwarm Web API and Payment and
 Transaction processing environment.</li>
-<li><a href="web-api">PaySwarm Web API</a> - Coming soon ...</li>
+<li><a href="source/web-api">PaySwarm Web API</a> - The main PaySwarm specification
+that describes how to publish digital assets for sale and perform purchases
+on those digital assets in a standards-compliant manner.</li>
 <li><a href="../vocabs/commerce">Commerce Vocabulary</a> - the RDF vocabulary 
 that is used to describe commercial transactions on a PaySwarm network.</li>
 <li><a href="../vocabs/payswarm">PaySwarm Vocabulary</a> - the RDF vocabulary 
