--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -793,7 +793,7 @@ Jane, who may now peruse the article.
         <pre class="example">
 {
    "@context": "http://purl.org/payswarm/v1",
-   "@subject": "&lthttp://payswarm.example.com/contracts/28394729347",
+   "@subject": "http://payswarm.example.com/contracts/28394729347",
    "@type": ["ps:Transaction", "ps:Contract"],
    "com:amount": "0.05",
    "com:currency": "USD",
