Added security concerns section.

--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -434,8 +434,8 @@ process.
         <dt><tdef>publishing agent</tdef></dt>
         <dd>A software agent acting on behalf of the <tref>asset provider</tref>
 that publishes <tref>asset</tref>s for sale. Typically, this is blogging
-software, content distribution software, online merchant software or a
-game of some kind.</dd>
+software, content distribution software, online merchant software or a Web-based
+game.</dd>
         <dt><tdef>configuration service</tdef></dt>
         <dd>A Web service that is used to publish the public Web service
 end-points and other public configuration information for a
@@ -731,17 +731,14 @@ z7u3IxpqNVcXHExjXQE=",
    "sig:cipher": "aes-128-cbc"
    "sig:publicKey": "http://payswarm.example.com/i/manu/keys/23"
 }
-
-   <section>
-     <h2>Security Concerns for Registration</h2>
-
-
-   </section>
-
 </pre>
+      </section>
+   
+      <section>
+        <h2>Security Concerns for Registration</h2>
+
 
       </section>
-
     </section>
 
     <section>
